<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M1K4" Id="{2074b16f-0d4c-4051-96e9-b5e1650ca1c7}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Pitch Mechanism:
	{attribute 'TcLinkTo' := '.diEncCnt:=TIIB[EL5042_M1K4_PitchBender]^FB Inputs Channel 1^Position'}
	M1K4_Pitch : HOMS_PitchMechanism := (ReqPosLimHi := -2136.3,
		                                 ReqPosLimLo := 2371.9,
		                                 diEncPosLimHi := 11132100,
		                                 diEncPosLimLo := 8926200);
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>