<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M3K4_Constants" Id="{3f5dc1e7-e2d9-4f88-8efd-e190b6a850fc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	// Encoder reference values in counts = nm
	nM3K4X_ENC_REF : ULINT := 6404509;
	nM3K4Y_ENC_REF : ULINT := 6047240;
	nM3K4rX_ENC_REF : ULINT := 48388188;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>