<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_M3K4_RTD" Id="{90998761-d636-4558-a061-062aa9b508de}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// M3K4 BENDER RTDs

	// M3K4 US RTDs
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4US1_M3K4US2]^RTD Inputs Channel 1^Value'}
	nM3K4US_RTD_1 AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4US1_M3K4US2]^RTD Inputs Channel 2^Value'}
	nM3K4US_RTD_2 AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4US3_M3K4DS1]^RTD Inputs Channel 1^Value'}
	nM3K4US_RTD_3 AT %I* : INT;

	// M2K4 DS RTDs
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4US3_M3K4DS1]^RTD Inputs Channel 2^Value'}
	nM3K4DS_RTD_1 AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4DS2_M3K4DS3]^RTD Inputs Channel 1^Value'}
	nM3K4DS_RTD_2 AT %I* : INT;
	{attribute 'TcLinkTo' := 'TIIB[EL3202-0010_M3K4DS2_M3K4DS3]^RTD Inputs Channel 2^Value'}
	nM3K4DS_RTD_3 AT %I* : INT;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>